Fix card rules regressions
Co-authored-by: Codex <codex@openai.com>